Remove Clearlag Legacy module and associated files.